Parser/test_cases/bad/letmissingcolon.cl
class Hello {

   foo:Int <- 89;
   bar:Int;
   
   foo(a:Int, b:Int, c:String): Int  {
      let a Int <- 4, recover:Int in a + c  
   };
   
   bar() :Int {
      6
   };
   
   
};
